platform/runtime/staging/import_legacy/latest/reference_bundle_audit/latest/repository_root/runtime/cache/bundle_audit/exams-exam01-sum_n/runtime/traces/bundle-audit.exams-exam01-sum_n/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/reference_bundle_audit/latest/repository_root/runtime/cache/bundle_audit/exams-exam01-sum_n/datasets/exercises/exams/exam01/sum_n/tests/main.c: In function 'main':
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/reference_bundle_audit/latest/repository_root/runtime/cache/bundle_audit/exams-exam01-sum_n/datasets/exercises/exams/exam01/sum_n/tests/main.c:11:13: error: implicit declaration of function 'atoi' [-Werror=implicit-function-declaration]
   11 |     int n = atoi(argv[1]);
      |             ^~~~
cc1: all warnings being treated as errors
